--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -8,6 +8,8 @@ day-index = 'calendar'
 # where did the content come from?
 mnf-v1 = 'mnf'
 chnet = 'mnf-v1'
+repost = 'mnf'
+digi2al = 'repost'
 twitter-cackhanded = 'twitter'
 twitter-norms_ps4 = 'twitter'
 youtube-gs = 'youtube'      # my 'Game Shows' channel
