Add subject key to lone recipe page

--- a/source/recipes/chicken-and-chorizo-gumbo.toml
+++ b/source/recipes/chicken-and-chorizo-gumbo.toml
@@ -4,6 +4,7 @@ published = 2020-06-26T10:00:00Z
 origin = 'mnf'
 type = 'recipe'
 tag = [ 'recipe', 'chicken', 'chorizo', 'gumbo', ]
+subject = 'recipes'
 
 
 # recipe extra fields
