Clarify the titles of published-elsewhere content

--- a/source/2010/07/17/devfort-cohort-4-ideation.toml
+++ b/source/2010/07/17/devfort-cohort-4-ideation.toml
@@ -1,4 +1,4 @@
-title = "/dev/fort: cohort 4 ideation"
+title = "Published YouTube video “/dev/fort: cohort 4 ideation”"
 published = 2010-07-17T21:43:24Z
 video_id = "MwejLGvho5I"
 origin = "youtube-mnf"
