--- a/source/2010/07/17/devfort-cohort-4-prioritisation.toml
+++ b/source/2010/07/17/devfort-cohort-4-prioritisation.toml
@@ -1,4 +1,4 @@
-title = "/dev/fort: cohort 4 prioritisation"
+title = "Published YouTube video “/dev/fort: cohort 4 prioritisation”"
 published = 2010-07-17T22:05:50Z
 video_id = "mnDw_JPMkFM"
 origin = "youtube-mnf"
