--- a/source/2010/07/17/devfort-cohort-4-second-day-of-coding.toml
+++ b/source/2010/07/17/devfort-cohort-4-second-day-of-coding.toml
@@ -1,4 +1,4 @@
-title = "/dev/fort: cohort 4, second day of coding"
+title = "Published YouTube video “/dev/fort: cohort 4, second day of coding”"
 published = 2010-07-17T22:44:54Z
 video_id = "E9Hv9SyZ72M"
 origin = "youtube-mnf"
