--- a/source/2010/07/19/devfort-cohort-4-fourth-day-of-coding.toml
+++ b/source/2010/07/19/devfort-cohort-4-fourth-day-of-coding.toml
@@ -1,4 +1,4 @@
-title = "/dev/fort: cohort 4, fourth day of coding"
+title = "Published YouTube video “/dev/fort: cohort 4, fourth day of coding”"
 published = 2010-07-19T00:17:32Z
 video_id = "sYkxaCQ9Fp8"
 origin = "youtube-mnf"
