--- a/source/2010/07/19/devfort-cohort-4-last-day-of-coding.toml
+++ b/source/2010/07/19/devfort-cohort-4-last-day-of-coding.toml
@@ -1,4 +1,4 @@
-title = "/dev/fort: cohort 4, last day of coding"
+title = "Published YouTube video “/dev/fort: cohort 4, last day of coding”"
 published = 2010-07-19T09:34:04Z
 video_id = "Oqpljgjs164"
 origin = "youtube-mnf"
