--- a/source/2020/09/24/horizon-zero-dawn-chapter-1-aloy.toml
+++ b/source/2020/09/24/horizon-zero-dawn-chapter-1-aloy.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 1 — Aloy"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 1 — Aloy”"
 published = 2020-09-24T09:43:12Z
 video_id = "KW9a_XOhBRs"
 origin = "youtube-gs"
