--- a/source/2020/09/24/horizon-zero-dawn-chapter-2-the-lesson.toml
+++ b/source/2020/09/24/horizon-zero-dawn-chapter-2-the-lesson.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 2 — The Lesson"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 2 — The Lesson”"
 published = 2020-09-24T12:22:10Z
 video_id = "QvB2OJYf448"
 origin = "youtube-gs"
