--- a/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
+++ b/source/2020/09/28/horizon-zero-dawn-chapter-3-the-embrace.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 3 — The Embrace"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 3 — The Embrace”"
 published = 2020-09-28T09:15:01Z
 video_id = "fwY8UWzm4ug"
 origin = "youtube-gs"
