--- a/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
+++ b/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 4 — The Proving"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 4 — The Proving”"
 published = 2020-10-02T07:15:01Z
 video_id = "NrRYFFW2obY"
 origin = "youtube-gs"
