--- a/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
+++ b/source/2020/10/05/horizon-zero-dawn-chapter-5-corruption.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 5 — Corruption"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 5 — Corruption”"
 published = 2020-10-05T07:15:01Z
 video_id = "4cuE6pNeqNs"
 origin = "youtube-gs"
