--- a/source/2020/10/09/horizon-zero-dawn-chapter-6-the-war-party.toml
+++ b/source/2020/10/09/horizon-zero-dawn-chapter-6-the-war-party.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 6 — The War Party"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 6 — The War Party”"
 published = 2020-10-09T07:15:02Z
 video_id = "S-sszZssMQw"
 origin = "youtube-gs"
