--- a/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
+++ b/source/2020/10/12/horizon-zero-dawn-chapter-7-outcasts.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 7 — Outcasts"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 7 — Outcasts”"
 published = 2020-10-12T07:15:01Z
 video_id = "mUbfI71cQZ0"
 origin = "youtube-gs"
