--- a/source/2020/10/16/horizon-zero-dawn-chapter-8-the-ring-of-metal.toml
+++ b/source/2020/10/16/horizon-zero-dawn-chapter-8-the-ring-of-metal.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 8 — The Ring of Metal"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 8 — The Ring of Metal”"
 published = 2020-10-16T07:15:01Z
 video_id = "H3rZthNNo8g"
 origin = "youtube-gs"
