--- a/source/2020/10/19/horizon-zero-dawn-chapter-9-sigma.toml
+++ b/source/2020/10/19/horizon-zero-dawn-chapter-9-sigma.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 9 — Sigma"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 9 — Sigma”"
 published = 2020-10-19T07:15:04Z
 video_id = "qFcDSH8rXWs"
 origin = "youtube-gs"
