--- a/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
+++ b/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 10 — Heading West"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 10 — Heading West”"
 published = 2020-10-23T07:15:01Z
 video_id = "7Sr4wgFOAEM"
 origin = "youtube-gs"
