--- a/source/2020/10/26/horizon-zero-dawn-chapter-11-the-infestation.toml
+++ b/source/2020/10/26/horizon-zero-dawn-chapter-11-the-infestation.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 11 — The Infestation"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 11 — The Infestation”"
 published = 2020-10-26T08:15:00Z
 video_id = "C_9tbUKoCpU"
 origin = "youtube-gs"
