--- a/source/2020/10/30/horizon-zero-dawn-chapter-12-daytower.toml
+++ b/source/2020/10/30/horizon-zero-dawn-chapter-12-daytower.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 12 — Daytower"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 12 — Daytower”"
 published = 2020-10-30T08:15:03Z
 video_id = "gIwwipLrobs"
 origin = "youtube-gs"
