--- a/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
+++ b/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 13 — Way of Broken Stones"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 13 — Way of Broken Stones”"
 published = 2020-11-02T08:15:01Z
 video_id = "hbcX_CS4rVs"
 origin = "youtube-gs"
