--- a/source/2020/11/09/horizon-zero-dawn-chapter-15-unearthed.toml
+++ b/source/2020/11/09/horizon-zero-dawn-chapter-15-unearthed.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 15 — Unearthed"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 15 — Unearthed”"
 published = 2020-11-09T07:15:01Z
 video_id = "j2KuYSTBqPM"
 origin = "youtube-gs"
