--- a/source/2020/11/13/horizon-zero-dawn-chapter-16-holy-meridian.toml
+++ b/source/2020/11/13/horizon-zero-dawn-chapter-16-holy-meridian.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 16 — Holy Meridian"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 16 — Holy Meridian”"
 published = 2020-11-13T07:15:00Z
 video_id = "1WkcAeld60Y"
 origin = "youtube-gs"
