--- a/source/2020/11/16/horizon-zero-dawn-chapter-17-family.toml
+++ b/source/2020/11/16/horizon-zero-dawn-chapter-17-family.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 17 — Family"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 17 — Family”"
 published = 2020-11-16T07:15:01Z
 video_id = "m_0pa_3wGeE"
 origin = "youtube-gs"
