--- a/source/2020/11/20/horizon-zero-dawn-chapter-18-rho.toml
+++ b/source/2020/11/20/horizon-zero-dawn-chapter-18-rho.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 18 — Rho"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 18 — Rho”"
 published = 2020-11-20T08:15:00Z
 video_id = "MVhx1qfJPvQ"
 origin = "youtube-gs"
