--- a/source/2020/11/23/horizon-zero-dawn-chapter-19-lone-light.toml
+++ b/source/2020/11/23/horizon-zero-dawn-chapter-19-lone-light.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 19 — Lone Light"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 19 — Lone Light”"
 published = 2020-11-23T08:15:01Z
 video_id = "rfVO6xnt12c"
 origin = "youtube-gs"
