--- a/source/2020/11/27/horizon-zero-dawn-chapter-20-blood.toml
+++ b/source/2020/11/27/horizon-zero-dawn-chapter-20-blood.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 20 — Blood"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 20 — Blood”"
 published = 2020-11-27T08:15:02Z
 video_id = "tACqg9R53A0"
 origin = "youtube-gs"
