--- a/source/2020/12/04/horizon-zero-dawn-chapter-22-dervahl.toml
+++ b/source/2020/12/04/horizon-zero-dawn-chapter-22-dervahl.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 22 — Dervahl"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 22 — Dervahl”"
 published = 2020-12-04T08:15:03Z
 video_id = "ndeLUKqYKNw"
 origin = "youtube-gs"
