--- a/source/2020/12/11/horizon-zero-dawn-chapter-24-prisoners.toml
+++ b/source/2020/12/11/horizon-zero-dawn-chapter-24-prisoners.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 24 — Prisoners"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 24 — Prisoners”"
 published = 2020-12-11T08:15:00Z
 video_id = "6F11Ua8RcW8"
 origin = "youtube-gs"
