--- a/source/2020/12/14/horizon-zero-dawn-chapter-25-divided.toml
+++ b/source/2020/12/14/horizon-zero-dawn-chapter-25-divided.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 25 — Divided"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 25 — Divided”"
 published = 2020-12-14T08:15:03Z
 video_id = "dMG0bKHFez8"
 origin = "youtube-gs"
