--- a/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
+++ b/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 26 — Dusk Mesa"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 26 — Dusk Mesa”"
 published = 2020-12-18T08:15:00Z
 video_id = "Ip3ZrAiSQT4"
 origin = "youtube-gs"
