--- a/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
+++ b/source/2020/12/21/horizon-zero-dawn-chapter-27-xi.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 27 — Xi"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 27 — Xi”"
 published = 2020-12-21T08:15:00Z
 video_id = "fUXBS-aVJ0A"
 origin = "youtube-gs"
