--- a/source/2020/12/28/horizon-zero-dawn-chapter-28-shattered-kiln.toml
+++ b/source/2020/12/28/horizon-zero-dawn-chapter-28-shattered-kiln.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 28 — Shattered Kiln"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 28 — Shattered Kiln”"
 published = 2020-12-28T08:15:00Z
 video_id = "Vbro-ubpYes"
 origin = "youtube-gs"
