--- a/source/2021/01/01/horizon-zero-dawn-chapter-29-makers-end.toml
+++ b/source/2021/01/01/horizon-zero-dawn-chapter-29-makers-end.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 29 — Maker's End"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 29 — Maker's End”"
 published = 2021-01-01T08:15:00Z
 video_id = "_3mK75yhzBM"
 origin = "youtube-gs"
