--- a/source/2021/01/04/horizon-zero-dawn-chapter-30-glitch.toml
+++ b/source/2021/01/04/horizon-zero-dawn-chapter-30-glitch.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 30 — Glitch"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 30 — Glitch”"
 published = 2021-01-04T08:15:01Z
 video_id = "uICcLf1tNcw"
 origin = "youtube-gs"
