--- a/source/2021/01/08/horizon-zero-dawn-chapter-31-eastward.toml
+++ b/source/2021/01/08/horizon-zero-dawn-chapter-31-eastward.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 31 — Eastward"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 31 — Eastward”"
 published = 2021-01-08T08:15:02Z
 video_id = "dSZOAfLm9JA"
 origin = "youtube-gs"
