--- a/source/2021/01/15/horizon-zero-dawn-chapter-33-grave-hoard.toml
+++ b/source/2021/01/15/horizon-zero-dawn-chapter-33-grave-hoard.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 33 — Grave-Hoard"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 33 — Grave-Hoard”"
 published = 2021-01-15T08:15:01Z
 video_id = "3u2gsqa1W8E"
 origin = "youtube-gs"
