--- a/source/2021/01/18/horizon-zero-dawn-chapter-34-the-cut.toml
+++ b/source/2021/01/18/horizon-zero-dawn-chapter-34-the-cut.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 34 — The Cut"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 34 — The Cut”"
 published = 2021-01-18T08:15:04Z
 video_id = "hvDY-HKgFVQ"
 origin = "youtube-gs"
