--- a/source/2021/01/18/nathan-evans-wellerman-family-tree-shantytok-mashupsupercut.toml
+++ b/source/2021/01/18/nathan-evans-wellerman-family-tree-shantytok-mashupsupercut.toml
@@ -1,4 +1,4 @@
-title = "Nathan Evans Wellerman Family Tree — shantytok mashup/supercut"
+title = "Published YouTube video “Nathan Evans Wellerman Family Tree — shantytok mashup/supercut”"
 published = 2021-01-18T19:36:41Z
 video_id = "TjVDmMI4sbk"
 origin = "youtube-mnf"
