--- a/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
+++ b/source/2021/01/22/horizon-zero-dawn-chapter-35-deep-din.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 35 — Deep Din"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 35 — Deep Din”"
 views = "25"
 published = 2021-01-22T08:15:01Z
 video_id = "rsWc2w7Dd6s"
