--- a/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
+++ b/source/2021/01/25/horizon-zero-dawn-chapter-36-shamans-path.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 36 — Shaman's Path"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 36 — Shaman's Path”"
 published = 2021-01-25T08:15:01Z
 video_id = "65wXFIU2nko"
 origin = "youtube-gs"
