--- a/source/2021/01/29/horizon-zero-dawn-chapter-37-the-spirit.toml
+++ b/source/2021/01/29/horizon-zero-dawn-chapter-37-the-spirit.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 37 — The Spirit"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 37 — The Spirit”"
 published = 2021-01-29T08:15:00Z
 video_id = "dA2KpDzKDVs"
 origin = "youtube-gs"
