--- a/source/2021/02/01/horizon-zero-dawn-chapter-38-plumelands.toml
+++ b/source/2021/02/01/horizon-zero-dawn-chapter-38-plumelands.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 38 — Plumelands"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 38 — Plumelands”"
 published = 2021-02-01T08:15:02Z
 video_id = "mLwI0zbO-hs"
 origin = "youtube-gs"
