--- a/source/2021/02/05/horizon-zero-dawn-chapter-39-for-the-werak.toml
+++ b/source/2021/02/05/horizon-zero-dawn-chapter-39-for-the-werak.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 39 — For the Werak"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 39 — For the Werak”"
 published = 2021-02-05T08:15:00Z
 video_id = "VyZAsw_Y0jg"
 origin = "youtube-gs"
