--- a/source/2021/02/08/horizon-zero-dawn-chapter-40-thunders-drum.toml
+++ b/source/2021/02/08/horizon-zero-dawn-chapter-40-thunders-drum.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 40 — Thunder's Drum"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 40 — Thunder's Drum”"
 published = 2021-02-08T08:15:00Z
 video_id = "abbbOHqefXI"
 origin = "youtube-gs"
