--- a/source/2021/02/12/horizon-zero-dawn-chapter-41-epsilon.toml
+++ b/source/2021/02/12/horizon-zero-dawn-chapter-41-epsilon.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 41 — Epsilon"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 41 — Epsilon”"
 published = 2021-02-12T08:15:01Z
 video_id = "chnnTYEfGiA"
 origin = "youtube-gs"
