--- a/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
+++ b/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 42 — CYAN"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 42 — CYAN”"
 published = 2021-02-15T08:15:00Z
 video_id = "9mBRiqSf53M"
 origin = "youtube-gs"
