--- a/source/2021/02/22/horizon-zero-dawn-chapter-44-stormbird.toml
+++ b/source/2021/02/22/horizon-zero-dawn-chapter-44-stormbird.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 44 — Stormbird"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 44 — Stormbird”"
 published = 2021-02-22T08:15:01Z
 video_id = "T0HjEBP1XI0"
 origin = "youtube-gs"
