--- a/source/2021/02/26/horizon-zero-dawn-chapter-45-free-heap.toml
+++ b/source/2021/02/26/horizon-zero-dawn-chapter-45-free-heap.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 45 — Free Heap"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 45 — Free Heap”"
 published = 2021-02-26T08:15:00Z
 video_id = "CLKno6rULwg"
 origin = "youtube-gs"
