--- a/source/2021/03/01/horizon-zero-dawn-chapter-46-hunting-grounds.toml
+++ b/source/2021/03/01/horizon-zero-dawn-chapter-46-hunting-grounds.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 46 — Hunting Grounds"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 46 — Hunting Grounds”"
 published = 2021-03-01T08:15:03Z
 video_id = "x0YvJZFwZhc"
 origin = "youtube-gs"
