--- a/source/2021/03/05/horizon-zero-dawn-chapter-47-redmaw.toml
+++ b/source/2021/03/05/horizon-zero-dawn-chapter-47-redmaw.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 47 — Redmaw"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 47 — Redmaw”"
 thumbnail = "https://i.ytimg.com/vi/sUNE52OKP-A/maxresdefault.jpg"
 published = 2021-03-05T08:15:04Z
 video_id = "sUNE52OKP-A"
