--- a/source/2021/03/08/horizon-zero-dawn-chapter-48-crash.toml
+++ b/source/2021/03/08/horizon-zero-dawn-chapter-48-crash.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 48 — Crash"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 48 — Crash”"
 published = 2021-03-08T08:15:00Z
 video_id = "5WvtAIQeEws"
 origin = "youtube-gs"
