--- a/source/2021/03/12/horizon-zero-dawn-chapter-49-sunfall.toml
+++ b/source/2021/03/12/horizon-zero-dawn-chapter-49-sunfall.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 49 — Sunfall"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 49 — Sunfall”"
 thumbnail = "https://i.ytimg.com/vi/PDOL93UAqj8/maxresdefault.jpg"
 published = 2021-03-12T08:15:00Z
 video_id = "PDOL93UAqj8"
