--- a/source/2021/03/15/horizon-zero-dawn-chapter-50-bounty.toml
+++ b/source/2021/03/15/horizon-zero-dawn-chapter-50-bounty.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 50 — Bounty"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 50 — Bounty”"
 published = 2021-03-15T08:15:00Z
 video_id = "_5ixM9yGL5w"
 origin = "youtube-gs"
