--- a/source/2021/03/19/horizon-zero-dawn-chapter-51-beneath.toml
+++ b/source/2021/03/19/horizon-zero-dawn-chapter-51-beneath.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 51 — Beneath"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 51 — Beneath”"
 thumbnail = "https://i.ytimg.com/vi/GDdqcZYowGk/maxresdefault.jpg"
 published = 2021-03-19T08:15:30Z
 video_id = "GDdqcZYowGk"
