--- a/source/2021/03/22/horizon-zero-dawn-chapter-52-zero-dawn.toml
+++ b/source/2021/03/22/horizon-zero-dawn-chapter-52-zero-dawn.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 52 — Zero Dawn"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 52 — Zero Dawn”"
 published = 2021-03-22T08:15:01Z
 video_id = "9xS2bg9Rkzg"
 origin = "youtube-gs"
