--- a/source/2021/03/26/assassins-creed-ii-chapter-1-famiglia-auditore.toml
+++ b/source/2021/03/26/assassins-creed-ii-chapter-1-famiglia-auditore.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 1 — Famiglia Auditore"
+title = "Published YouTube video “Assassin's Creed II — Chapter 1 — Famiglia Auditore”"
 thumbnail = "https://i.ytimg.com/vi/RLUAJTX6Zxg/maxresdefault.jpg"
 published = 2021-03-26T16:37:25Z
 video_id = "RLUAJTX6Zxg"
