--- a/source/2021/03/29/horizon-zero-dawn-chapter-53-gaia.toml
+++ b/source/2021/03/29/horizon-zero-dawn-chapter-53-gaia.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 53 — GAIA"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 53 — GAIA”"
 published = 2021-03-29T15:30:01Z
 video_id = "MV-3H-V3ToY"
 origin = "youtube-gs"
