--- a/source/2021/04/05/horizon-zero-dawn-chapter-54-sacrifice.toml
+++ b/source/2021/04/05/horizon-zero-dawn-chapter-54-sacrifice.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 54 — Sacrifice"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 54 — Sacrifice”"
 published = 2021-04-05T15:30:05Z
 video_id = "xF2poDHo0hA"
 origin = "youtube-gs"
