--- a/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
+++ b/source/2021/04/08/behind-the-scenes-horizon-zero-dawn-edits-in-the-sun-ring.toml
@@ -1,4 +1,4 @@
-title = "Behind the Scenes — Horizon Zero Dawn — Edits in the Sun Ring"
+title = "Published YouTube video “Behind the Scenes — Horizon Zero Dawn — Edits in the Sun Ring”"
 published = 2021-04-08T09:39:18Z
 video_id = "t65w8tDQn-g"
 origin = "youtube-gs"
