--- a/source/2021/04/09/assassins-creed-ii-chapter-2-accused.toml
+++ b/source/2021/04/09/assassins-creed-ii-chapter-2-accused.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 2 — Accused"
+title = "Published YouTube video “Assassin's Creed II — Chapter 2 — Accused”"
 published = 2021-04-09T15:33:11Z
 video_id = "P5wHTbpQe_U"
 origin = "youtube-gs"
