--- a/source/2021/04/12/horizon-zero-dawn-chapter-55-all-mother.toml
+++ b/source/2021/04/12/horizon-zero-dawn-chapter-55-all-mother.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 55 — All-Mother"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 55 — All-Mother”"
 published = 2021-04-12T15:30:05Z
 video_id = "SKzCfwor59E"
 origin = "youtube-gs"
