--- a/source/2021/04/16/assassins-creed-ii-chapter-3-the-deed.toml
+++ b/source/2021/04/16/assassins-creed-ii-chapter-3-the-deed.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 3 — The Deed"
+title = "Published YouTube video “Assassin's Creed II — Chapter 3 — The Deed”"
 published = 2021-04-16T15:30:00Z
 video_id = "Fv6oLwsWrJQ"
 origin = "youtube-gs"
