--- a/source/2021/04/19/horizon-zero-dawn-chapter-56-bitter-climb.toml
+++ b/source/2021/04/19/horizon-zero-dawn-chapter-56-bitter-climb.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 56 — Bitter Climb"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 56 — Bitter Climb”"
 published = 2021-04-19T15:30:02Z
 video_id = "88b9jzX_C48"
 origin = "youtube-gs"
