--- a/source/2021/04/23/assassins-creed-ii-chapter-4-vieri-de-pazzi.toml
+++ b/source/2021/04/23/assassins-creed-ii-chapter-4-vieri-de-pazzi.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 4 — Vieri de' Pazzi"
+title = "Published YouTube video “Assassin's Creed II — Chapter 4 — Vieri de' Pazzi”"
 published = 2021-04-23T15:31:03Z
 video_id = "_OilEmPhTSE"
 origin = "youtube-gs"
