--- a/source/2021/04/26/horizon-zero-dawn-chapter-57-gaia-prime.toml
+++ b/source/2021/04/26/horizon-zero-dawn-chapter-57-gaia-prime.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 57 — Gaia Prime"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 57 — Gaia Prime”"
 published = 2021-04-26T15:30:01Z
 video_id = "CDzOQXYNo9k"
 origin = "youtube-gs"
