--- a/source/2021/04/30/assassins-creed-ii-chapter-5-francesco-de-pazzi.toml
+++ b/source/2021/04/30/assassins-creed-ii-chapter-5-francesco-de-pazzi.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 5 — Francesco de' Pazzi"
+title = "Published YouTube video “Assassin's Creed II — Chapter 5 — Francesco de' Pazzi”"
 published = 2021-04-30T15:30:40Z
 video_id = "XhlqKIGrWVk"
 origin = "youtube-gs"
