--- a/source/2021/05/07/assassins-creed-ii-chapter-6-pazzi-conspiracy-part-1.toml
+++ b/source/2021/05/07/assassins-creed-ii-chapter-6-pazzi-conspiracy-part-1.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 6 — Pazzi Conspiracy (Part 1)"
+title = "Published YouTube video “Assassin's Creed II — Chapter 6 — Pazzi Conspiracy (Part 1)”"
 published = 2021-05-07T15:30:38Z
 video_id = "Z8Iv4MyPMuc"
 origin = "youtube-gs"
