--- a/source/2021/05/10/horizon-zero-dawn-chapter-59-preparations.toml
+++ b/source/2021/05/10/horizon-zero-dawn-chapter-59-preparations.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 59 — Preparations"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 59 — Preparations”"
 published = 2021-05-10T15:30:09Z
 video_id = "ene2gyVh42Y"
 origin = "youtube-gs"
