--- a/source/2021/05/14/assassins-creed-ii-chapter-7-pazzi-conspiracy-part-2.toml
+++ b/source/2021/05/14/assassins-creed-ii-chapter-7-pazzi-conspiracy-part-2.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 7 — Pazzi Conspiracy (Part 2)"
+title = "Published YouTube video “Assassin's Creed II — Chapter 7 — Pazzi Conspiracy (Part 2)”"
 published = 2021-05-14T15:52:21Z
 video_id = "SKzF0O1Fljs"
 origin = "youtube-gs"
