--- a/source/2021/05/17/horizon-zero-dawn-chapter-60-the-end.toml
+++ b/source/2021/05/17/horizon-zero-dawn-chapter-60-the-end.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 60 — The End"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 60 — The End”"
 published = 2021-05-17T15:30:10Z
 video_id = "ZChVl5RnMHA"
 origin = "youtube-gs"
