--- a/source/2021/05/24/horizon-zero-dawn-completing-the-game-vantages.toml
+++ b/source/2021/05/24/horizon-zero-dawn-completing-the-game-vantages.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Completing the Game — Vantages"
+title = "Published YouTube video “Horizon Zero Dawn — Completing the Game — Vantages”"
 published = 2021-05-24T15:42:43Z
 video_id = "NaCXF7r3Oh4"
 origin = "youtube-gs"
