--- a/source/2021/05/28/assassins-creed-ii-chapter-9-among-thieves.toml
+++ b/source/2021/05/28/assassins-creed-ii-chapter-9-among-thieves.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 9 — Among Thieves"
+title = "Published YouTube video “Assassin's Creed II — Chapter 9 — Among Thieves”"
 published = 2021-05-28T15:30:31Z
 video_id = "jNucid-hGz0"
 origin = "youtube-gs"
