--- a/source/2021/05/31/horizon-zero-dawn-completing-the-game-banuk-figures.toml
+++ b/source/2021/05/31/horizon-zero-dawn-completing-the-game-banuk-figures.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Completing the Game — Banuk Figures"
+title = "Published YouTube video “Horizon Zero Dawn — Completing the Game — Banuk Figures”"
 published = 2021-05-31T08:07:40Z
 video_id = "9Uea43n_r8c"
 origin = "youtube-gs"
