--- a/source/2021/06/04/assassins-creed-ii-chapter-10-emilio-barbarigo.toml
+++ b/source/2021/06/04/assassins-creed-ii-chapter-10-emilio-barbarigo.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 10 — Emilio Barbarigo"
+title = "Published YouTube video “Assassin's Creed II — Chapter 10 — Emilio Barbarigo”"
 published = 2021-06-04T15:31:16Z
 video_id = "9g4lOGFqV9w"
 origin = "youtube-gs"
