--- a/source/2010/07/18/devfort-cohort-4-third-day-of-coding.toml
+++ b/source/2010/07/18/devfort-cohort-4-third-day-of-coding.toml
@@ -1,4 +1,4 @@
-title = "/dev/fort: cohort 4, third day of coding"
+title = "Published YouTube video “/dev/fort: cohort 4, third day of coding”"
 published = 2010-07-18T08:50:51Z
 video_id = "zw5l3iVltwE"
 origin = "youtube-mnf"
