--- a/source/2020/11/06/horizon-zero-dawn-chapter-14-hunting.toml
+++ b/source/2020/11/06/horizon-zero-dawn-chapter-14-hunting.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 14 — Hunting"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 14 — Hunting”"
 published = 2020-11-06T08:15:00Z
 video_id = "JznC6TII07c"
 origin = "youtube-gs"
