--- a/source/2020/11/30/horizon-zero-dawn-chapter-21-ersa.toml
+++ b/source/2020/11/30/horizon-zero-dawn-chapter-21-ersa.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 21 — Ersa"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 21 — Ersa”"
 published = 2020-11-30T08:15:01Z
 video_id = "JhgbOyelU2M"
 origin = "youtube-gs"
