--- a/source/2020/12/07/horizon-zero-dawn-chapter-23-sunstone-rock.toml
+++ b/source/2020/12/07/horizon-zero-dawn-chapter-23-sunstone-rock.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 23 — Sunstone Rock"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 23 — Sunstone Rock”"
 published = 2020-12-07T08:15:03Z
 video_id = "hxaHpApCXoU"
 origin = "youtube-gs"
