--- a/source/2021/01/11/horizon-zero-dawn-chapter-32-blue-light.toml
+++ b/source/2021/01/11/horizon-zero-dawn-chapter-32-blue-light.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 32 — Blue Light"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 32 — Blue Light”"
 published = 2021-01-11T08:15:02Z
 video_id = "XinX8wBdBwM"
 origin = "youtube-gs"
