--- a/source/2021/02/19/horizon-zero-dawn-chapter-43-a-sorry-mess.toml
+++ b/source/2021/02/19/horizon-zero-dawn-chapter-43-a-sorry-mess.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 43 — A Sorry Mess"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 43 — A Sorry Mess”"
 published = 2021-02-19T08:15:00Z
 video_id = "Qy28ySFDnNI"
 origin = "youtube-gs"
