--- a/source/2021/05/03/horizon-zero-dawn-chapter-58-goodbyes.toml
+++ b/source/2021/05/03/horizon-zero-dawn-chapter-58-goodbyes.toml
@@ -1,4 +1,4 @@
-title = "Horizon Zero Dawn — Chapter 58 — Goodbyes"
+title = "Published YouTube video “Horizon Zero Dawn — Chapter 58 — Goodbyes”"
 published = 2021-05-03T15:30:04Z
 video_id = "OqGikeIwBhY"
 origin = "youtube-gs"
