--- a/source/2021/05/21/assassins-creed-ii-chapter-8-venezia.toml
+++ b/source/2021/05/21/assassins-creed-ii-chapter-8-venezia.toml
@@ -1,4 +1,4 @@
-title = "Assassin's Creed II — Chapter 8 — Venezia"
+title = "Published YouTube video “Assassin's Creed II — Chapter 8 — Venezia”"
 published = 2021-05-21T15:43:30Z
 video_id = "7andCXrI_y8"
 origin = "youtube-gs"
