Add history API post from my Artfinder days

--- a/source/2012/06/22/the-history-api-yay.toml
+++ b/source/2012/06/22/the-history-api-yay.toml
@@ -3,3 +3,5 @@ published = 2012-06-22T14:38:59Z
 image = "https://mnf.m17s.net/2012/06/22/the-history-api-yay.jpg"
 origin = "instagram"
 type = "photo"
+tag = ['history-api',]
+thread = 'artfinder-history-api'
