--- a/source/2012/06/26/artists-pkqk-rendering-of-me-giving-a-talk-on-the-history-api.toml
+++ b/source/2012/06/26/artists-pkqk-rendering-of-me-giving-a-talk-on-the-history-api.toml
@@ -3,3 +3,5 @@ published = 2012-06-26T12:39:05Z
 image = "https://mnf.m17s.net/2012/06/26/artists-pkqk-rendering-of-me-giving-a-talk-on-the-history-api.jpg"
 origin = "instagram"
 type = "photo"
+tag = ['history-api',]
+thread = 'artfinder-history-api'
