--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -13,6 +13,7 @@ mnf-v1 = 'mnf'
 chnet = 'mnf-v1'
 repost = 'mnf'
 digi2al = 'repost'
+artfinder = 'repost'
 twitter-cackhanded = 'twitter'
 twitter-norms_ps4 = 'twitter'
 youtube-gs = 'youtube'      # my 'Game Shows' channel
